# dragonball-z-api-in-python-and-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  analysis.py  config.py  db.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 265ccf836992_adjust_fk_relationship.py  7fd8d0d4468c_added_users_table.py  d2aef93e423c_added_initial_tables.py  e56e5cd2be1d_added_account_api_data.py
api/: models.py  router.py  schema.py  services.py
auth/: models.py  router.py
config/: config.py  rabbitmq.py
tests/: test_auth.py  test_character.py  test_main.py
